--- a/server/static/website/css/custom.css
+++ b/server/static/website/css/custom.css
@@ -1,110 +1,116 @@
 /* Custom colors */
 body {
-  color: #ffffff;
+    color: #ffffff;
 }
 
 a, a:hover, a:visited {
-  color: #FFD200;
+    color: #FFD200;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 /* Background image */
 @media (max-width: 320px) {
-  body {
-    background: url(../img/therminal-xsmall.jpg) no-repeat center center fixed;
-  }
+    body {
+        background: url(../img/therminal-xsmall.jpg) no-repeat center center fixed;
+    }
 }
 
 @media (max-width: 767px) {
-  body {
-    background: url(../img/therminal-small.jpg) no-repeat center center fixed;
-  }
+    body {
+        background: url(../img/therminal-small.jpg) no-repeat center center fixed;
+    }
 }
 
 @media (min-width: 768px) {
-  body {
-    background: url(../img/therminal.jpg) no-repeat center center fixed;
-  }
+    body {
+        background: url(../img/therminal.jpg) no-repeat center center fixed;
+    }
 }
 
 .snakes {
-  max-width: 100%;
-  width: 25em;
+    max-width: 100%;
+    width: 25em;
 }
 
 .snakes-wrapper {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
 }
 
 body {
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #screenshot-carousel {
-  margin: 2em 0 0;
-  max-width: 400px;
+    margin: 2em 0 0;
+    max-width: 400px;
 }
 
 /* Content */
 @media (min-width: 768px) {
-  .top-row {
-    margin-top: 20px;
-  }
+    .top-row {
+        margin-top: 20px;
+    }
 }
 
 .content-card {
-  background: #1e64c8;
+    background: #1e64c8;
 }
 
 .content-block {
-  background-color: #000000;
-  background-color: rgba(0, 0, 0, 0.7);
-  padding: 10px 40px 10px 20px;
+    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px 40px 10px 20px;
 }
 
 .card {
-  border: none;
-  border-radius: 0;
+    border: none;
+    border-radius: 0;
 }
 
 .badge-card {
-  background: none;
+    background: none;
 }
 
 .badge-card a {
-  display: block;
-  float: left;
-  height: 60px;
-  margin-right: 20px;
+    display: block;
+    float: left;
+    height: 60px;
+    margin-right: 20px;
 }
 
 .badge-card a img {
-  height: auto;
-  max-width: 200px;
+    max-height: 60px;
+    width: auto;
 }
 
 footer {
-  background: black;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  margin-top: 2em;
+    background: black;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    margin-top: 2em;
 }
 
 .partner-logo {
-  width: 100%;
-  height: 100%;
-  max-width: 150px;
+    width: 100%;
+    height: 100%;
+    max-width: 150px;
 }
 
 .partner-row {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 15px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 15px;
+}
+
+
+.logo {
+    max-width: 250px;
+    height: auto;
 }
